fix spacing between intro and rest

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -41,10 +41,10 @@ p {
 }
 
 .intro {
-    font-size: 1.45em;
+    font-size: 1.4em;
     line-height: 1.3em;
     color: #333;
-    padding: 10px 10px 15px;
+    padding: 10px 10px 20px;
 }
 
 footer {
